one test method per file, one jvm per class